--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <lombok.version>1.16.12</lombok.version>
         <fastjson.version>1.2.29</fastjson.version>
         <junit.version>4.12</junit.version>
+        <spring.version>4.3.9.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -34,12 +35,23 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.3.9.RELEASE</version>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.9.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
