--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>javastudy</groupId>
     <artifactId>javastudy</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -13,7 +12,7 @@
         <lombok.version>1.16.12</lombok.version>
         <fastjson.version>1.2.29</fastjson.version>
         <junit.version>4.12</junit.version>
-        <spring.version>4.3.9.RELEASE</spring.version>
+        <spring.version>4.3.18.RELEASE</spring.version>
     </properties>
 
     <dependencies>
@@ -22,11 +21,7 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.tuniu.tmc</groupId>-->
-            <!--<artifactId>tmc-common</artifactId>-->
-            <!--<version>0.1.0.perform-SNAPSHOT</version>-->
-        <!--</dependency>-->
+
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -41,6 +36,16 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.24</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
