--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>27.0-jre</version>
+            <exclusions>
+                <exclusion>
+                        <groupId>org.checkerframework</groupId>
+                        <artifactId>checker-qual</artifactId>
+                </exclusion>
+
+            </exclusions>
         </dependency>
 
     </dependencies>
